[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polytoria.py"
version = "0.1.0"
description = "Wrapper for the Polytoria API"
requires-python = ">=3.10"
dependencies = ["curl-cffi"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["polyapi"]